# thefamilytreeapp

./: .gitignore  BUGFIX.md  COMPLETE_OVERHAUL.md  FINAL_UPDATE.md  IMPROVEMENTS.md  INTERFACE_UPDATE.md  LICENSE.txt  MAJOR_FIX.md  PROJECT_SUMMARY.md  QUICKSTART.md  install-tauri-deps.sh  package-lock.json  package.json  readme.md
desktop/: package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
shared-core/: index.js  package.json
shared-core/database/: DatabaseInterface.js  IndexedDBDatabase.js  SQLiteDatabase.js  index.js
shared-core/gedcom/: GedcomHandler.js  index.js
shared-core/i18n/: translations.js
shared-core/models/: Person.js  Relationship.js  index.js
ui/: index.html  package.json  vite.config.js
ui/src/: App.css  App.jsx
ui/src/components/: FamilyTreeFlow.jsx  LanguageSelector.jsx  PersonEditModal.jsx  PersonNode.jsx  RelationshipEdge.jsx  RelationshipEditModal.jsx
ui/src/services/: database.js
